--- a/users/templates/users/home.html
+++ b/users/templates/users/home.html
@@ -8,85 +8,93 @@
     <h2 class="mt-4">Welcome, {{ user.username }}!</h2>
 </div>
 
-<!-- Posts del perfil y de los contactos -->
-<h3 class="card-title mt-5 p-3 bg-custom text-white rounded shadow-sm">Posts</h3>
+<!-- Verificar si el usuario tiene amigos o posts -->
+{% if user.friends.count == 0 and posts.count == 0 %}
+    <div class="text-center mt-5">
+        <h3>There are no posts at the moment, go create your first post!</h3>
+        <a href="{% url 'create_post' %}" class="btn btn-primary mt-3">Create Post</a>
+    </div>
+{% else %}
+    <!-- Posts del perfil y de los contactos -->
+    <h3 class="card-title mt-5 p-3 bg-custom text-white rounded shadow-sm">Posts</h3>
 
-{% for post in posts %}
-    {% if post.user == user or post.user in user.friends.all %}
-        <div class="card mb-5">
-            <div class="card-body">
-                <div class="d-flex align-items-center mb-3">
-                    <a href="{% url 'profile' post.user.username %}">
-                        <img src="{{ post.user.profile_picture.url }}" alt="{{ post.user.username }}" class="miniature-profile-picture me-2">
-                    </a>
-                    <div>
-                        <a href="{% url 'profile' post.user.username %}" class="text-decoration-none">
-                            <h6 class="mb-0">{{ post.user.username }}</h6>
-                            <small class="text-muted">Posted on {{ post.created_at }}</small>
+    {% for post in posts %}
+        {% if post.user == user or post.user in user.friends.all %}
+            <div class="card mb-5">
+                <div class="card-body">
+                    <div class="d-flex align-items-center mb-3">
+                        <a href="{% url 'profile' post.user.username %}">
+                            <img src="{{ post.user.profile_picture.url }}" alt="{{ post.user.username }}" class="miniature-profile-picture me-2">
                         </a>
+                        <div>
+                            <a href="{% url 'profile' post.user.username %}" class="text-decoration-none">
+                                <h6 class="mb-0">{{ post.user.username }}</h6>
+                                <small class="text-muted">Posted on {{ post.created_at }}</small>
+                            </a>
+                        </div>
+                    </div>
+                    <h5 class="card-title">{{ post.title }}</h5>
+                    <p class="card-text">{{ post.content }}</p>
+                    
+                    {% if post.image %}
+                    <div class="image-container mb-3">
+                        <img src="{{ post.image.url }}" alt="Post Image" class="img-fluid rounded shadow-sm">
+                    </div>
+                    {% endif %}
+                    
+                    {% if post.link %}
+                        <a href="{{ post.link }}" target="_blank" class="btn btn-primary">View Link</a>
+                    {% endif %}
+                    
+                    <!-- Like/Unlike Button -->
+                    <form action="{% url 'like_post' post.pk %}" method="POST" class="d-inline">
+                        {% csrf_token %}
+                        <button type="submit" class="btn btn-outline-primary">
+                            {% if user in post.likes.all %}
+                                Unlike
+                            {% else %}
+                                Like
+                            {% endif %}
+                            ({{ post.total_likes }})
+                        </button>
+                    </form>
+
+                    <!-- Comment Section -->
+                    <a class="btn btn-outline-secondary" data-bs-toggle="collapse" href="#comments-{{ post.pk }}" role="button" aria-expanded="false" aria-controls="comments-{{ post.pk }}">
+                        Comments ({{ post.comments.count }})
+                    </a>
+
+                    <div class="collapse mt-3" id="comments-{{ post.pk }}">
+                        <ul class="list-group mb-3">
+                            {% for comment in post.comments.all %}
+                                <li class="list-group-item d-flex align-items-start">
+                                    <!-- Imagen de perfil del usuario que hizo el comentario -->
+                                    <a href="{% url 'profile' comment.user.username %}">
+                                        <img src="{{ comment.user.profile_picture.url }}" alt="{{ comment.user.username }}" class="miniature-comment-picture me-2">
+                                    </a>
+                                    <div>
+                                        <a href="{% url 'profile' comment.user.username %}" class="text-decoration-none">
+                                            <strong>{{ comment.user.username }}:</strong>
+                                        </a>
+                                        <p class="mb-1">{{ comment.content }}</p>
+                                        <small class="text-muted">{{ comment.created_at }}</small>
+                                    </div>
+                                </li>
+                            {% endfor %}
+                        </ul>
+
+                        <!-- Add Comment Form -->
+                        <form action="{% url 'add_comment' post.pk %}" method="POST">
+                            {% csrf_token %}
+                            <div class="input-group mb-3">
+                                <textarea class="form-control" name="content" rows="2" placeholder="Add a comment..."></textarea>
+                                <button type="submit" class="btn btn-primary">Comment</button>
+                            </div>
+                        </form>
                     </div>
                 </div>
-                <h5 class="card-title">{{ post.title }}</h5>
-                <p class="card-text">{{ post.content }}</p>
-                
-                {% if post.image %}
-                <div class="image-container mb-3">
-                    <img src="{{ post.image.url }}" alt="Post Image" class="img-fluid rounded shadow-sm">
-                </div>
-                {% endif %}
-                
-                {% if post.link %}
-                    <a href="{{ post.link }}" target="_blank" class="btn btn-primary">View Link</a>
-                {% endif %}
-                
-                <!-- Like/Unlike Button -->
-                <form action="{% url 'like_post' post.pk %}" method="POST" class="d-inline">
-                    {% csrf_token %}
-                    <button type="submit" class="btn btn-outline-primary">
-                        {% if user in post.likes.all %}
-                            Unlike
-                        {% else %}
-                            Like
-                        {% endif %}
-                        ({{ post.total_likes }})
-                    </button>
-                </form>
-
-                <!-- Comment Section -->
-                <a class="btn btn-outline-secondary" data-bs-toggle="collapse" href="#comments-{{ post.pk }}" role="button" aria-expanded="false" aria-controls="comments-{{ post.pk }}">
-                    Comments ({{ post.comments.count }})
-                </a>
-
-                <div class="collapse mt-3" id="comments-{{ post.pk }}">
-                    <ul class="list-group mb-3">
-                        {% for comment in post.comments.all %}
-                            <li class="list-group-item d-flex align-items-start">
-                                <!-- Imagen de perfil del usuario que hizo el comentario -->
-                                <a href="{% url 'profile' comment.user.username %}">
-                                    <img src="{{ comment.user.profile_picture.url }}" alt="{{ comment.user.username }}" class="miniature-comment-picture me-2">
-                                </a>
-                                <div>
-                                    <a href="{% url 'profile' comment.user.username %}" class="text-decoration-none">
-                                        <strong>{{ comment.user.username }}:</strong>
-                                    </a>
-                                    <p class="mb-1">{{ comment.content }}</p>
-                                    <small class="text-muted">{{ comment.created_at }}</small>
-                                </div>
-                            </li>
-                        {% endfor %}
-                    </ul>
-
-                    <!-- Add Comment Form -->
-                    <form action="{% url 'add_comment' post.pk %}" method="POST">
-                        {% csrf_token %}
-                        <div class="input-group mb-3">
-                            <textarea class="form-control" name="content" rows="2" placeholder="Add a comment..."></textarea>
-                            <button type="submit" class="btn btn-primary">Comment</button>
-                        </div>
-                    </form>
-                </div>
             </div>
-        </div>
-    {% endif %}
-{% endfor %}
+        {% endif %}
+    {% endfor %}
+{% endif %}
 {% endblock %}
