--- a/users/templates/users/base.html
+++ b/users/templates/users/base.html
@@ -16,6 +16,9 @@
 
     <!-- Custom CSS -->
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+
+    <!-- jQuery -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 <body>
     <!-- Loading spinner -->
@@ -23,8 +26,47 @@
         <div class="spinner-border text-primary" role="status">
             <span class="visually-hidden">Loading...</span>
         </div>
-    </div>    
+    </div> 
     
+    
+    <!-- Modal de Política de Cookies -->
+    <div class="modal fade" id="cookiesModal" tabindex="-1" role="dialog" aria-labelledby="cookiesModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="cookiesModalLabel">Política de Cookies</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <p>Este sitio utiliza cookies para mejorar su experiencia. Al continuar navegando, aceptas el uso de cookies. Puedes encontrar más información en nuestra <a href="#" id="privacyPolicyLink">política de privacidad</a>.</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Rechazar</button>
+                    <button type="button" class="btn btn-primary">Aceptar</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Modal de Política de Privacidad -->
+    <div class="modal fade" id="privacyPolicyModal" tabindex="-1" role="dialog" aria-labelledby="privacyPolicyModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="privacyPolicyModalLabel">Política de Privacidad</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <p>Aquí va el contenido de tu política de privacidad...</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    
+    <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light bg-custom">
         <div class="container">
             <a class="navbar-brand text-light" href="{% url 'home' %}">Xlang</a>
@@ -42,7 +84,6 @@
             </form>
             {% endif %}
     
-            <!-- Navigation -->
             <div class="collapse navbar-collapse order-lg-3 order-2" id="navbarNav">
                 <ul class="navbar-nav">
                     {% if user.is_authenticated %}
@@ -91,9 +132,22 @@
         {% endblock %}
     </div>
 
+    <!-- Footer -->
+    <footer class="footer mt-auto py-3 bg-light">
+        <div class="container">
+            <span class="text-muted">
+                <a href="#" id="cookiesPolicyLink">Cookies Policy</a>
+                <a href="#" id="privacyPolicyLink">Privacy policy</a>
+            </span>            
+        </div>
+    </footer>
+    
     <!-- Bootstrap JS and dependencies -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
     <script src="{% static 'js/loading.js' %}"></script>
+    <script src="{% static 'js/cookies_modal.js' %}"></script>
 </body>
 </html>
