--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -10,7 +10,7 @@
         <div class="col-md-6 col-lg-4">
             <div class="card">
                 <div class="card-header bg-primary text-white">
-                    <h4 class="mb-0">Login</h4>
+                    <h4 class="mb-0">Discover Xlang</h4>
                 </div>
                 <div class="card-body">
                     <form method="post">
